--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,11 @@ indexed_file = { git = "https://github.com/JojiiOfficial/IndexedFile" }
 byteorder = "1.4.3"
 tar = "0.4.35"
 flate2 = "1.0.20"
+
+[dev-dependencies]
+criterion = { version = "0.3.4" }
+rand = "0.8.4"
+
+[[bench]]
+name = "document_vector"
+harness = false
