--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ indexed_file = { git = "https://github.com/JojiiOfficial/IndexedFile" }
 compressed_vec = { git = "https://github.com/JojiiOfficial/CompressedVec" }
 byteorder = "1.4.3"
 tar = "0.4.37"
-flate2 = "1.0.21"
+flate2 = "1.0.22"
+bktree = { git = "https://github.com/JojiiOfficial/bktree"}
 
 [dev-dependencies]
 criterion = "0.3.5"
