--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ indexed_file = { git = "https://github.com/JojiiOfficial/IndexedFile" }
 compressed_vec = { git = "https://github.com/JojiiOfficial/CompressedVec" }
 byteorder = "1.4.3"
 tar = "0.4.38"
-flate2 = "1.0.23"
+flate2 = {version = "1.0.24", default-features = false, features = ["zlib-ng"]}
 bktree = { git = "https://github.com/JojiiOfficial/bktree", optional = true}
-serde = {version = "1.0.137", features = ["derive"]}
+serde = { version = "1.0.137", features = ["derive"] }
 
 [dev-dependencies]
 criterion = "0.3.5"
