--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ flate2 = { version = "1.0.24", default-features = false, features = [
   "zlib-ng",
 ] }
 bktree = { git = "https://github.com/JojiiOfficial/bktree", optional = true }
-serde = { version = "1.0.137", features = ["derive"] }
+serde = { version = "1.0.137", features = ["derive", "rc"] }
 bincode = "1.3.3"
 
 [dev-dependencies]
